update: boss template file

--- a/templates/boss.html
+++ b/templates/boss.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="boss-page">
     <h2>{{ boss.Name }}</h2>
-    <p class="boss-desc">{{ boss.Description }}</p><button class="view-more" id="viewMoreBtn">View more</button>
+    <p class="boss-desc">{{ boss.Description }} <button class="view-more" id="viewMoreBtn">View more</button></p>
     <!-- All variations are shown below; dropdown removed per user request -->
     
     <div class="tables-area">
