--- a/templates/index.html
+++ b/templates/index.html
@@ -18,4 +18,13 @@
     <h1>{{ season.SeasonName }}</h1>
     <p class="lead">Select a boss on the left to view variations and turn-by-turn plans.</p>
 </section>
+
+<section class="checklist-section">
+    <h2>Pokemon Checklist</h2>
+    <div id="checklist-container" class="checklist-container">
+        <!-- Populated by JavaScript -->
+    </div>
+</section>
+
+<script src="/static/js/checklist.js"></script>
 {% endblock %}
