--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Poke MMO Raids - XMas Raid 2025</title>
+    <title>PokeMMO Raid Book - 2025</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
     <div class="app-shell">
         <aside class="sidebar">
-            <div class="sidebar-header">XMas Raid 2025</div>
+            <div class="sidebar-header">PokeMMO Raid Book</div>
             <div class="sidebar-content">
                 {% block sidebar %}{% endblock %}
+                {% block admin_sidebar %}{% endblock %}
             </div>
         </aside>
 
