--- a/templates/build_team.html
+++ b/templates/build_team.html
@@ -19,8 +19,9 @@
         <p class="builder-subtitle">Edit your team composition. Each player needs a Pokémon, Move, Item, and Ability.
         </p>
     </div>
-
-    <form id="teamBuilderForm" class="team-form">
+    
+    <!-- -- Redundant form as below table is used as a form input method replacing this -->
+    <!-- <form id="teamBuilderForm" class="team-form">
         <div class="players-grid">
             {% for player_index in range %}
             <div class="player-card">
@@ -64,7 +65,7 @@
             <button type="submit" class="btn-primary">Save Changes</button>
             <button type="reset" class="btn-secondary">Reset Form</button>
         </div>
-    </form>
+    </form> -->
 
     <div class="plan-area">
         <h3>Planned Turns</h3>
