--- a/templates/admin_build_team.html
+++ b/templates/admin_build_team.html
@@ -27,7 +27,7 @@
         <input type="hidden" id="raidBossAction" value="{{ action }}" />
 
         <div class="form-group" style="max-width: 400px;">
-            <label for="bossName">Boss Name *</label>
+            <label for="bossName">Boss Name</label>
             <input id="bossName" name="boss_name" value="{{ boss_name }}" required />
         </div>
 
